--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "repository": "https://github.com/Vadim-1507/CryptoBot",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "NODE_ENV='development' webpack serve --mode development",
+    "build": "NODE_ENV='production' webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
